- update AWS CDK to 1.32.1 - use Docker image assets - remove EcrStack - build fat jar of AWS CDK app - update READMEs